--- a/pace3.html
+++ b/pace3.html
@@ -45,10 +45,10 @@
     <div class="container">
         <h1>Weekly Running Plan Calculator</h1>
         <label for="weeklyDistance">Weekly Distance (km):</label>
-        <input type="number" id="weeklyDistance" placeholder="Enter weekly distance in km">
+        <input type="number" id="weeklyDistance" placeholder="Enter weekly distance in km" onkeypress="handleEnter(event)">
 
         <label for="vcr">VCR (m/s):</label>
-        <input type="number" id="vcr" step="0.01" placeholder="Enter VCR in m/s">
+        <input type="number" id="vcr" step="0.01" placeholder="Enter VCR in m/s" onkeypress="handleEnter(event)">
 
         <button onclick="calculatePlan()">Calculate</button>
 
@@ -65,6 +65,12 @@
 
         function formatDistanceRange(minDistance, maxDistance) {
             return minDistance === maxDistance ? `${minDistance} km` : `${minDistance} km - ${maxDistance} km`;
+        }
+
+        function handleEnter(event) {
+            if (event.key === 'Enter') {
+                calculatePlan();
+            }
         }
 
         function calculatePlan() {
