--- a/pace2.html
+++ b/pace2.html
@@ -97,7 +97,7 @@ function calculatePace() {
     const resultsDiv = document.getElementById("results");
     resultsDiv.innerHTML = "";
 
-    const percentagesToCalculate = [percentage, 70, 80, 85, 90, 95, 97, 100, 105, 110];
+    const percentagesToCalculate = [percentage, 70, 75, 80, 85, 90, 95, 97, 100, 105, 110];
 
     percentagesToCalculate.forEach(percent => {
         const calculatedPaceSeconds = (totalSeconds / (percent / 100));
