--- a/vcr2.html
+++ b/vcr2.html
@@ -176,19 +176,18 @@ function calculateDistance(timeInMinutes, speedAdjustment = 0) {
 }
 
 // ฟังก์ชันสำหรับคำนวณ Pace (xx:yy)
-function calculatePace(vcr) {
-    var paceInSeconds = 1000 / vcr; // Pace หน่วยเป็นวินาที/กิโลเมตร
-    var minutes = Math.floor(paceInSeconds / 60); // นาที
-    var seconds = Math.round(paceInSeconds % 60); // วินาที
+function calculatePace(timeInMinutes, distance) {
+    var paceInMinutes = timeInMinutes / distance; // Pace หน่วยเป็นนาที/กิโลเมตร
+    var minutes = Math.floor(paceInMinutes); // นาที
+    var seconds = Math.round((paceInMinutes - minutes) * 60); // วินาที
     if (seconds < 10) seconds = "0" + seconds; // เติม 0 ด้านหน้า
     return `${minutes}:${seconds}`; // คืนค่าในรูปแบบ xx:yy
 }
 
 // คำนวณและแสดงผล
 function displayPrediction(timeInMinutes, speedAdjustment, elementId) {
-    var adjustedVcr = vcr + speedAdjustment; // ปรับความเร็วตามที่กำหนด
     var distance = calculateDistance(timeInMinutes, speedAdjustment); // คำนวณระยะทาง
-    var pace = calculatePace(adjustedVcr); // คำนวณ Pace
+    var pace = calculatePace(timeInMinutes, distance); // คำนวณ Pace
     document.getElementById(elementId).textContent =
         `${distance.toFixed(2)} กม., Pace: ${pace} นาที/กม.`; // แสดงผลใน Element ที่กำหนด
 }
@@ -197,6 +196,7 @@ function displayPrediction(timeInMinutes, speedAdjustment, elementId) {
 displayPrediction(60, 0, 'distance-prediction60'); // 60 นาที
 displayPrediction(45, 0.1, 'distance-prediction45'); // 45 นาที
 displayPrediction(30, 0.2, 'distance-prediction30'); // 30 นาที
+
 
 
     
