--- a/vcr2.html
+++ b/vcr2.html
@@ -176,7 +176,7 @@ function calculateDistance(timeInMinutes, speedAdjustment = 0) {
 }
 
 // ฟังก์ชันสำหรับคำนวณ Pace (xx:yy)
-function calculatePace(timeInMinutes, distance) {
+function calculatePaceVCR(timeInMinutes, distance) {
     var paceInMinutes = timeInMinutes / distance; // Pace หน่วยเป็นนาที/กิโลเมตร
     var minutes = Math.floor(paceInMinutes); // นาที
     var seconds = Math.round((paceInMinutes - minutes) * 60); // วินาที
@@ -187,7 +187,7 @@ function calculatePace(timeInMinutes, distance) {
 // คำนวณและแสดงผล
 function displayPrediction(timeInMinutes, speedAdjustment, elementId) {
     var distance = calculateDistance(timeInMinutes, speedAdjustment); // คำนวณระยะทาง
-    var pace = calculatePace(timeInMinutes, distance); // คำนวณ Pace
+    var pace = calculatePaceVCR(timeInMinutes, distance); // คำนวณ Pace
     document.getElementById(elementId).textContent =
         `${distance.toFixed(2)} กม., Pace: ${pace} นาที/กม.`; // แสดงผลใน Element ที่กำหนด
 }
