--- a/vcr2.html
+++ b/vcr2.html
@@ -146,6 +146,11 @@
         </div>
     </div>
 
+    <div class="link">
+            <a href="https://wadcharid.github.io/vcr-fcaon/vcr1.html" target="_blank">หาค่า VCR</a>
+    </div>
+
+
 
     
 <script>
