--- a/vcr2.html
+++ b/vcr2.html
@@ -100,6 +100,17 @@
                 font-size: 0.9em;
             }
         }
+                .link {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .link a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
