--- a/load1.html
+++ b/load1.html
@@ -33,6 +33,7 @@
         .inline {
             display: flex;
             justify-content: space-between;
+            gap: 10px; /* Adjusted spacing between inputs */
         }
         .inline input {
             width: 48%;
